test_output_full.txt
 INFO Testing chapter 'Introduction': "chapter_01_introduction.md"
 INFO Testing chapter 'Tensors: The Bedrock': "chapter_02_tensors.md"
ERROR rustdoc returned an error:

--- stdout

running 2 tests
test chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_ (line 7) ... FAILED
test chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_::Hands_On (line 49) ... FAILED

failures:

---- chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_ (line 7) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_02_tensors.md:7:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.
---- chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_::Hands_On (line 49) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_02_tensors.md:49:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.

failures:
    chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_ (line 7)
    chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_::Hands_On (line 49)

test result: FAILED. 0 passed; 2 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.19s


--- stderr

 INFO Testing chapter 'Automatic Differentiation': "chapter_03_autograd.md"
ERROR rustdoc returned an error:

--- stdout

running 2 tests
test chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::The_Tape (line 13) ... FAILED
test chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::Example (line 35) ... FAILED

failures:

---- chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::The_Tape (line 13) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_03_autograd.md:13:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.
---- chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::Example (line 35) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_03_autograd.md:35:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.

failures:
    chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::Example (line 35)
    chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::The_Tape (line 13)

test result: FAILED. 0 passed; 2 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.10s


--- stderr

 INFO Testing chapter 'Building Blocks': "chapter_04_nn.md"
ERROR rustdoc returned an error:

--- stdout

running 3 tests
test chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Linear_Layer (line 26) ... FAILED
test chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Module_Trait (line 9) ... FAILED
test chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::Example (line 37) ... FAILED

failures:

---- chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Linear_Layer (line 26) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_04_nn.md:26:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.
---- chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Module_Trait (line 9) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_04_nn.md:9:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.
---- chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::Example (line 37) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_04_nn.md:37:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.

failures:
    chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::Example (line 37)
    chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Linear_Layer (line 26)
    chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Module_Trait (line 9)

test result: FAILED. 0 passed; 3 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.13s


--- stderr

 INFO Testing chapter 'The Mechanics of Attention': "chapter_05_attention.md"
ERROR rustdoc returned an error:

--- stdout

running 1 test
test chapter_05_attention.md - Chapter_5__The_Mechanics_of_Attention::Implementation (line 36) ... FAILED

failures:

---- chapter_05_attention.md - Chapter_5__The_Mechanics_of_Attention::Implementation (line 36) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_05_attention.md:36:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.

failures:
    chapter_05_attention.md - Chapter_5__The_Mechanics_of_Attention::Implementation (line 36)

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.08s


--- stderr

 INFO Testing chapter 'The Gemma Architecture': "chapter_06_gemma.md"
ERROR rustdoc returned an error:

--- stdout

running 2 tests
test chapter_06_gemma.md - Chapter_6__The_Gemma_Architecture::The_Full_Model (line 43) ... FAILED
test chapter_06_gemma.md - Chapter_6__The_Gemma_Architecture::The_Gemma_Block (line 18) ... FAILED

failures:

---- chapter_06_gemma.md - Chapter_6__The_Gemma_Architecture::The_Full_Model (line 43) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_06_gemma.md:43:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.
---- chapter_06_gemma.md - Chapter_6__The_Gemma_Architecture::The_Gemma_Block (line 18) stdout ----
error[E0463]: can't find crate for `xla_rs`
 --> chapter_06_gemma.md:18:1
  |
2 | extern crate xla_rs;
  | ^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
Couldn't compile the test.

failures:
    chapter_06_gemma.md - Chapter_6__The_Gemma_Architecture::The_Full_Model (line 43)
    chapter_06_gemma.md - Chapter_6__The_Gemma_Architecture::The_Gemma_Block (line 18)

test result: FAILED. 0 passed; 2 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.07s


--- stderr

 INFO Testing chapter 'Inference Optimizations': "chapter_07_inference_optimizations.md"
 INFO Testing chapter 'Distributed Inference': "chapter_08_distributed_inference.md"
 INFO Testing chapter 'The Training Loop': "chapter_09_training.md"
 INFO Testing chapter 'Serving': "chapter_10_serving.md"
 INFO Testing chapter 'State Space Models': "chapter_11_ssm.md"
 INFO Testing chapter 'Generative Art: Diffusion': "chapter_12_diffusion.md"
 INFO Testing chapter 'Communication Collectives': "chapter_13_collectives.md"
 INFO Testing chapter 'Reinforcement Learning': "chapter_14_rl.md"
 INFO Testing chapter 'Quantization': "chapter_15_quantization.md"
ERROR One or more tests failed
